fix: friends in footer will break the page(#master)

--- a/components/layout.less
+++ b/components/layout.less
@@ -105,6 +105,8 @@ blockquote {
 
   .friends {
     word-break: keep-all;
+    word-wrap: break-word;
+
     span:not(:last-child)::after {
       content: '|';
       padding: 0px 0.5em;
